@@ -2660,7 +2660,7 @@ _ecore_evas_mouse_multi_down_process(Ecore_Evas *ee, int device,
                                      unsigned int timestamp)
 {
    if (ee->rotation == 0)
-      evas_event_feed_multi_down(ee->evas, device,
+     evas_event_input_multi_down(ee->evas, device,
                                  x, y,
                                  radius,
                                  radius_x, radius_y,
@@ -2669,7 +2669,7 @@ _ecore_evas_mouse_multi_down_process(Ecore_Evas *ee, int device,
                                  mx, my,
                                  flags, timestamp, NULL);
    else if (ee->rotation == 90)
-      evas_event_feed_multi_down(ee->evas, device,
+     evas_event_input_multi_down(ee->evas, device,
                                  ee->h - y - 1, x,
                                  radius,
                                  radius_y, radius_x,
@@ -2678,7 +2678,7 @@ _ecore_evas_mouse_multi_down_process(Ecore_Evas *ee, int device,
                                  ee->h - my - 1, mx,
                                  flags, timestamp, NULL);
    else if (ee->rotation == 180)
-      evas_event_feed_multi_down(ee->evas, device,
+     evas_event_input_multi_down(ee->evas, device,
                                  ee->w - x - 1, ee->h - y - 1,
                                  radius,
                                  radius_x, radius_y,
@@ -2687,7 +2687,7 @@ _ecore_evas_mouse_multi_down_process(Ecore_Evas *ee, int device,
                                  ee->w - mx - 1, ee->h - my - 1,
                                  flags, timestamp, NULL);
    else if (ee->rotation == 270)
-      evas_event_feed_multi_down(ee->evas, device,
+     evas_event_input_multi_down(ee->evas, device,
                                  y, ee->w - x - 1,
                                  radius,
                                  radius_y, radius_x,
@@ -2709,7 +2709,7 @@ _ecore_evas_mouse_multi_up_process(Ecore_Evas *ee, int device,
                                    unsigned int timestamp)
 {
    if (ee->rotation == 0)
-      evas_event_feed_multi_up(ee->evas, device,
+     evas_event_input_multi_up(ee->evas, device,
                                x, y,
                                radius,
                                radius_x, radius_y,
@@ -2718,7 +2718,7 @@ _ecore_evas_mouse_multi_up_process(Ecore_Evas *ee, int device,
                                mx, my,
                                flags, timestamp, NULL);
    else if (ee->rotation == 90)
-      evas_event_feed_multi_up(ee->evas, device,
+     evas_event_input_multi_up(ee->evas, device,
                                ee->h - y - 1, x,
                                radius,
                                radius_y, radius_x,
@@ -2727,7 +2727,7 @@ _ecore_evas_mouse_multi_up_process(Ecore_Evas *ee, int device,
                                ee->h - my - 1, mx,
                                flags, timestamp, NULL);
    else if (ee->rotation == 180)
-      evas_event_feed_multi_up(ee->evas, device,
+     evas_event_input_multi_up(ee->evas, device,
                                ee->w - x - 1, ee->h - y - 1,
                                radius,
                                radius_x, radius_y,
@@ -2736,7 +2736,7 @@ _ecore_evas_mouse_multi_up_process(Ecore_Evas *ee, int device,
                                ee->w - mx - 1, ee->h - my - 1,
                                flags, timestamp, NULL);
    else if (ee->rotation == 270)
-      evas_event_feed_multi_up(ee->evas, device,
+     evas_event_input_multi_up(ee->evas, device,
                                y, ee->w - x - 1,
                                radius,
                                radius_y, radius_x,
