@@ -195,8 +195,10 @@ enum
    EVAS_CANVAS_SUB_ID_EVENT_FEED_MOUSE_OUT,
    EVAS_CANVAS_SUB_ID_EVENT_FEED_MULTI_DOWN,
    EVAS_CANVAS_SUB_ID_EVENT_FEED_MULTI_UP,
-   EVAS_CANVAS_SUB_ID_EVENT_INPUT_MULTI_MOVE,
    EVAS_CANVAS_SUB_ID_EVENT_FEED_MULTI_MOVE,
+   EVAS_CANVAS_SUB_ID_EVENT_INPUT_MULTI_DOWN,
+   EVAS_CANVAS_SUB_ID_EVENT_INPUT_MULTI_UP,
+   EVAS_CANVAS_SUB_ID_EVENT_INPUT_MULTI_MOVE,
    EVAS_CANVAS_SUB_ID_EVENT_FEED_KEY_DOWN,
    EVAS_CANVAS_SUB_ID_EVENT_FEED_KEY_UP,
    EVAS_CANVAS_SUB_ID_EVENT_FEED_HOLD,
@@ -953,6 +955,30 @@ enum
 #define evas_canvas_event_feed_mouse_out(timestamp, data) EVAS_CANVAS_ID(EVAS_CANVAS_SUB_ID_EVENT_FEED_MOUSE_OUT), EO_TYPECHECK(unsigned int, timestamp), EO_TYPECHECK(const void *, data)
 
 /**
+ * @def evas_canvas_event_input_multi_down
+ * @since 1.8
+ *
+ * No description supplied by the EAPI.
+ *
+ * @param[in] d
+ * @param[in] x
+ * @param[in] y
+ * @param[in] rad
+ * @param[in] radx
+ * @param[in] rady
+ * @param[in] pres
+ * @param[in] ang
+ * @param[in] fx
+ * @param[in] fy
+ * @param[in] flags
+ * @param[in] timestamp
+ * @param[in] data
+ *
+ * @see evas_event_input_multi_down
+ */
+#define evas_canvas_event_input_multi_down(d, x, y, rad, radx, rady, pres, ang, fx, fy, flags, timestamp, data) EVAS_CANVAS_ID(EVAS_CANVAS_SUB_ID_EVENT_INPUT_MULTI_DOWN), EO_TYPECHECK(int, d), EO_TYPECHECK(int, x), EO_TYPECHECK(int, y), EO_TYPECHECK(double, rad), EO_TYPECHECK(double, radx), EO_TYPECHECK(double, rady), EO_TYPECHECK(double, pres), EO_TYPECHECK(double, ang), EO_TYPECHECK(double, fx), EO_TYPECHECK(double, fy), EO_TYPECHECK(Evas_Button_Flags, flags), EO_TYPECHECK(unsigned int, timestamp), EO_TYPECHECK(const void *, data)
+
+/**
  * @def evas_canvas_event_feed_multi_down
  * @since 1.8
  *
@@ -975,6 +1001,30 @@ enum
  * @see evas_event_feed_multi_down
  */
 #define evas_canvas_event_feed_multi_down(d, x, y, rad, radx, rady, pres, ang, fx, fy, flags, timestamp, data) EVAS_CANVAS_ID(EVAS_CANVAS_SUB_ID_EVENT_FEED_MULTI_DOWN), EO_TYPECHECK(int, d), EO_TYPECHECK(int, x), EO_TYPECHECK(int, y), EO_TYPECHECK(double, rad), EO_TYPECHECK(double, radx), EO_TYPECHECK(double, rady), EO_TYPECHECK(double, pres), EO_TYPECHECK(double, ang), EO_TYPECHECK(double, fx), EO_TYPECHECK(double, fy), EO_TYPECHECK(Evas_Button_Flags, flags), EO_TYPECHECK(unsigned int, timestamp), EO_TYPECHECK(const void *, data)
+
+/**
+ * @def evas_canvas_event_input_multi_up
+ * @since 1.8
+ *
+ * No description supplied by the EAPI.
+ *
+ * @param[in] d
+ * @param[in] x
+ * @param[in] y
+ * @param[in] rad
+ * @param[in] radx
+ * @param[in] rady
+ * @param[in] pres
+ * @param[in] ang
+ * @param[in] fx
+ * @param[in] fy
+ * @param[in] flags
+ * @param[in] timestamp
+ * @param[in] data
+ *
+ * @see evas_event_input_multi_up
+ */
+#define evas_canvas_event_input_multi_up(d, x, y, rad, radx, rady, pres, ang, fx, fy, flags, timestamp, data) EVAS_CANVAS_ID(EVAS_CANVAS_SUB_ID_EVENT_INPUT_MULTI_UP), EO_TYPECHECK(int, d), EO_TYPECHECK(int, x), EO_TYPECHECK(int, y), EO_TYPECHECK(double, rad), EO_TYPECHECK(double, radx), EO_TYPECHECK(double, rady), EO_TYPECHECK(double, pres), EO_TYPECHECK(double, ang), EO_TYPECHECK(double, fx), EO_TYPECHECK(double, fy), EO_TYPECHECK(Evas_Button_Flags, flags), EO_TYPECHECK(unsigned int, timestamp), EO_TYPECHECK(const void *, data)
 
 /**
  * @def evas_canvas_event_feed_multi_up
